--- a/Prompt_Sample.ipynb
+++ b/Prompt_Sample.ipynb
@@ -133,7 +133,7 @@
       "source": [
         "from openai import OpenAI\n",
         "client = OpenAI(\n",
-        "    api_key='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'\n",
+        "    api_key='Enter you OPENAI API KEY'\n",
         ")\n",
         "\n",
         "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
