--- a/Prompt_Sample.ipynb
+++ b/Prompt_Sample.ipynb
@@ -84,7 +84,7 @@
       "outputs": [],
       "source": [
         "def get_prompt(document: str):\n",
-        "  return f''' You are a bot specialized in generating questions for high school students through the following steps:\n",
+        "  return f''' You are a bot specialized in generating questions from a given document for high school students through the following steps:\n",
         "  step 1: the document is given between the delimiters ###.\n",
         "  step 2: generate three multiple choice questions with three different difficulties -First is easy, second is medium, and third is hard.\n",
         "  step 3: generate fill the gaps question that contains gap to be filled.\n",
